--- a/src/content/docs/accounts/accounts-billing/account-setup/choose-your-data-center.mdx
+++ b/src/content/docs/accounts/accounts-billing/account-setup/choose-your-data-center.mdx
@@ -259,4 +259,4 @@ Customer Data from existing New Relic accounts cannot be transferred or shared a
 Use either of these options to verify whether your account data is hosted in the EU region's data center:
 
 * In APM, mouse over the application name to view the URL. If it begins with `rpm.eu.newrelic.com/`, it is an EU-based account.
-* Check your [New Relic license key](/docs/accounts/install-new-relic/account-setup/license-key). If it begins with `EU`, it is an EU-based account.
+* Check your <LicenseKey />. If it begins with `EU`, it is an EU-based account.
